thread resources + divers petits chgts